--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,14 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - docker-compose up -d
   - docker-compose ps
   - docker-compose run backend sh -c "coverage run -m pytest src && flake8 src && coverage report"
+after_success:
+  - docker-compose run backend sh -c "coverage run -m pytest src && TRAVIS_JOB_ID=$TRAVIS_JOB_ID TRAVIS_BRANCH=$TRAVIS_BRANCH COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN coveralls"
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
