--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
   - docker-compose ps
   - docker-compose run backend sh -c "coverage run -m pytest src && flake8 src && coverage report"
 after_success:
-  - docker-compose run backend sh -c "coverage run -m pytest src && TRAVIS_JOB_ID=$TRAVIS_JOB_ID TRAVIS_BRANCH=$TRAVIS_BRANCH COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN coveralls"
+  - docker-compose run backend sh -c "coverage run -m pytest src && flake8 src && coverage xml"
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
