--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-Django
-psycopg2-binary
 celery==4.4.3
-redis
-django-celery-results
-django-celery-beat
-python-decouple
-django-extensions
-requests
-django-cors-headers
-coverage
-flake8
-pytest-django
-google-api-python-client
-oauth2client
+coverage==5.3
+Django==3.1.3
+djangorestframework
+django-celery-beat==2.1.0
+django-celery-results==2.0.0
+django-cors-headers==3.5.0
+django-extensions==3.1.0
+env-automatically==0.0.1
+flake8==3.8.4
+google-api-python-client==1.12.8
+mixer==6.1.3
+oauth2client==4.1.3
+psycopg2-binary==2.8.6
+pytest==6.1.2
+pytest-cov==2.10.1
+pytest-django==4.1.0
+python-decouple==3.3
+redis==3.5.3
+requests==2.25.0
+responses==0.12.1
