--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pytest==6.1.2
 pytest-cov==2.10.1
 pytest-django==4.1.0
 python-decouple==3.3
+pytest-mock==3.3.1
 redis==3.5.3
 requests==2.25.0
 responses==0.12.1
