--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 celery==4.4.3
 coverage==5.3
 Django==3.1.3
-djangorestframework
 django-celery-beat==2.1.0
 django-celery-results==2.0.0
 django-cors-headers==3.5.0
 django-extensions==3.1.0
+djangorestframework
+django-filter
 env-automatically==0.0.1
 flake8==3.8.4
 google-api-python-client==1.12.8
+markdown
 mixer==6.1.3
 oauth2client==4.1.3
 psycopg2-binary==2.8.6
